# minihf

./: .gitignore  CMakeLists.txt  prj.conf  west.yml
boards/ellierf/minihf/: Kconfig.minihf  board.cmake  board.yml  minihf.defconfig  minihf.dts  minihf.yml
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.si5351a  clock_si5351a.c  clock_si5351a.h
drivers/regulator/: CMakeLists.txt  Kconfig  Kconfig.tps55289  regulator_tps55289.c  regulator_tps55289.h
dts/bindings/clock/: silabs,si5351a.yaml
dts/bindings/gnss/: ublox,m10.yaml
dts/bindings/regulator/: ti,tps55289.yaml
frontend/: main.py
include/: config.h  radio_core.h  uart_handler.h
include/hardware/: oled.h  tr_switch.h
include/modes/: cw.h  ftx.h
include/modes/encoders/: cw.h  ft8.h  rtty.h  wspr.h
include/protocol/: cobs.h  packet_parser.h  payload_utils.h
include/radio/: radio.h  radio_cmd.h  tx_engine.h
minihf_api/: .gitignore  Cargo.toml  build.rs
minihf_api/src/: lib.rs  minihf_api.udl
src/: config.h  main.c  uart_handler.c
src/hardware/: oled.c  tr_switch.c
src/modes/: cw.c  ftx.c  rtty.c
src/modes/encoders/: cw.c  ft8.c  rtty.c  wspr.c
src/protocol/: cobs.c  packet_parser.c
src/radio/: radio.c  radio_cmd.c  tx_engine.c
