[package]
name = "minihf_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29", features = ["bindgen-tests"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"