[package]
name = "minihf_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["cli"] }
serialport = "4.8.1"
cobs = "0.5.0"
crc = "3.4.0"
thiserror = "2.0.18"
libc = "0.2"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.31.0", features = ["bindgen-tests"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
